Inject button in front of the search bar on Twitter.com

--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,14 @@
   "author": "Wojtek Witkowski <hi@wojtek.im>",
   "homepage_url": "https://github.com/pugson/chrome-twitter-goto-advanced-search",
 
-  "browser_action": {
-    "default_icon": "twitter.png",
-    "default_title": "Twitter GoTo Advanced Search"
-  },
+  // "browser_action": {
+  //   "default_icon": "twitter.png",
+  //   "default_title": "Twitter GoTo Advanced Search"
+  // },
+  "content_scripts": [{
+    "js": ["button.js"],
+    "matches": ["https://twitter.com/*"]
+  }],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
