--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
 
   "name": "Twitter GoTo Advanced Search",
-  "description": "Opens a new tab with the Advanced Search page on Twitter",
-  "version": "1.0",
+  "description": "Injects a button which opens the Advanced Search page on Twitter when clicked.",
+  "version": "2.0",
   "author": "Wojtek Witkowski <hi@wojtek.im>",
   "homepage_url": "https://github.com/pugson/chrome-twitter-goto-advanced-search",
 
